# hoa-paper-stats

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  donor_data.csv  main.py  pyproject.toml
