[project]
name = "hoa-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hoa-tools==1.0.6",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0"]

[tool.ruff]
